Fixed the guests' spacing issues

--- a/scss/elements/_invites.scss
+++ b/scss/elements/_invites.scss
@@ -9,7 +9,7 @@
 .invites .invites-liste > div {
   width: 22.5%;
   max-width: 270px;
-  height: 335px;
+
 
   margin-bottom: 32px;
 
@@ -41,7 +41,7 @@
     width: 46.6666%;
     max-width: 335px;
 
-    margin-bottom: 118px;
+    margin-bottom: 10%;
   }
 
 }
@@ -52,7 +52,6 @@
       width: 100%;
       max-width: 100%;
 
-      margin-bottom: 224px;
       height: auto;
     }
 
